fixed typo and renamed file

--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -2145,7 +2145,7 @@
     "        \"SYSTEM_PROMPT\": system_prompt,\n",
     "        \"USER_PROMPT\": user_prompt,\n",
     "    }\n",
-    "    file_path = os.path.join(data_path, f\"{topic_title}_{num_q_for_saving}_qs__v{version:02}.json\")\n",
+    "    file_path = os.path.join(data_path, f\"{topic_title}_{num_q_for_saving}_qs_v{version:02}.json\")\n",
     "    with open(file_path, \"w\") as f:\n",
     "        json.dump(data, f)\n",
     "\n",
