Finished question generation for political bias

--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -2164,9 +2164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/MacMini/arena-llm-capability-evaluation/notebooks/../src/question_generation.py:91: UserWarning:\n",
+      "\n",
+      "Warning: using unexpected model 'claude-3-7-sonnet-20250219'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 298 new questions, have 298/300 total questions\n",
+      "Generated 2 new questions, have 300/300 total questions\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = []\n",
     "num_qs_total = 300\n",
@@ -2182,6 +2201,13 @@
     "with open(file_path, \"w\") as f:\n",
     "    json.dump([d.question.model_dump() for d in dataset], f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
