--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'filter_dataset' from 'question_generation' (/Volumes/MacMini/arena-llm-capability-evaluation/notebooks/../src/question_generation.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m data_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mgetcwd(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#import necessary functions\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mquestion_generation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_structured_response, generate_structured_responses_with_threadpool, filter_dataset\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GenPrompts, pretty_print_questions\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'filter_dataset' from 'question_generation' (/Volumes/MacMini/arena-llm-capability-evaluation/notebooks/../src/question_generation.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import io\n",
@@ -46,7 +34,7 @@
     "data_path = os.path.join(os.getcwd(), '..', 'data')\n",
     "\n",
     "#import necessary functions\n",
-    "from question_generation import generate_structured_response, generate_structured_responses_with_threadpool, filter_dataset\n",
+    "from question_generation import generate_structured_response, generate_structured_responses_with_threadpool#, filter_dataset\n",
     "from utils import GenPrompts, pretty_print_questions\n"
    ]
   },
